# whispy

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
tests/: __init__.py  conftest.py  test_cli.py  test_realtime.py  test_recorder.py  test_unit.py
whispy/: __init__.py  cli.py  recorder.py  transcribe.py
