[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project]
name = "whispy"
version = "0.1.0"
authors = [
  { name="Whispy Team", email="whispy@example.com" },
]
description = "A Python wrapper for whisper.cpp - fast automatic speech recognition"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["whisper", "speech recognition", "ASR", "audio", "machine learning"]
dependencies = [
    "typer>=0.9.0", 
    "rich>=13.0.0",
]

[project.scripts]
whispy = "whispy.cli:app"

[project.urls]
"Homepage" = "https://github.com/your-username/whispy"
"Bug Reports" = "https://github.com/your-username/whispy/issues"
"Source" = "https://github.com/your-username/whispy"

[tool.setuptools.packages.find]
where = ["."]
include = ["whispy*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
whispy = ["*.so", "*.dylib", "*.dll"] 